--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -74,14 +74,10 @@ h1, h2, h3, h4, h5 {
 
 header {
   display: flex;
-/*  flex-direction: row;*/
   justify-content: space-around;
 }
 
 header nav {
-/*  display: inline-block;*/
-/*  width: 691px;*/
-/*  vertical-align: top;*/
   margin-top: 35px;
 }
 
@@ -110,18 +106,23 @@ header .logo {
 
 /* cta */
 
+.cta {
+  display: flex;
+  justify-content: center;
+}
+
 .cta .cta-text {
-  display: inline-block;
-  vertical-align: top;
   font-size: 77px;
   margin-top: 120px;
   text-align: center;
   padding: 0px 75px;
+  display: flex;
+  flex-direction: column;
 }
 
 .cta .cta-text button {
   background: white;
-  vertical-align: top;
+  align-self: center;
   margin-top: 6px;
   padding: 8px 44px;
   font-size: 17px;
@@ -135,7 +136,6 @@ header .logo {
 }
 
 .cta img {
-  display: inline-block;
   margin-top: 69px;
 }
 
@@ -147,11 +147,11 @@ header .logo {
 
 .main-content .top-content {
   padding: 0 10px;
+  display: flex;
 }
 
 .main-content .top-content .text-content {
   width: 410px;
-  display: inline-block;
   margin-right: 34px;
 }
 
@@ -166,11 +166,11 @@ header .logo {
 .main-content .bottom-content {
   margin-top: 37px;
   padding: 0 10px;
+  display: flex;
 }
 
 .main-content .bottom-content .text-content {
   width: 275px;
-  display: inline-block;
   margin-right: 12px;
 }
 
